# AI-LLM-Bootcamp

Final-Capstone-Project-Day-1/: docker-compose.yaml
Final-Capstone-Project-Day-2/: README.md  docker-compose.yaml
LangChain-Assignment/: homework_answer_final.md.txt  homework_instructions.md.txt  main.py.txt
LangChain-Live-Session/: pyproject.toml  requirements.txt
LangChain-Live-Session/02_models/: main1_invoke.py  main2_stream.py  main3_batch.py  main6_tool_calling.py  main7_structured_output.py
LangChain-Live-Session/03_agent/: main1_create_agent.py  main2_dynamic_model.py  main4_dynamic_prompt.py  main5_structured_output.py
LangChain-Live-Session/05_tool/: main3_context_example.py  main4_sql_database_tool.py
LangChain-Live-Session/06_st_memory/: main1_postgresql_memory_example.py
LangChain-RAG/: README.md  main1_document_loading.py  main1a_basic_text_loading.py  main1b_csv_json_loading.py  main1c_directory_loading_chunking.py  main1d_advanced_splitting.py  main2_embeddings_vectorstore.py  main2a_basic_embeddings.py  main2b_chroma_vectorstore.py  main2c_advanced_retrieval.py  main3a_basic_retriever.py  main3b_retriever_agent.py  main3c_advanced_retrieval.py  main4_two_step_rag.py  main4a_basic_implementation.py  main4b_context_engineering.py  main4c_rag_evaluation.py  main5_agentic_rag.py  main5a_basic_agent.py  main5b_multi_source_retrieval.py  main5c_adaptive_retrieval.py  main6_hybrid_rag.py  main6a_query_enhancement.py  main6b_retrieval_validation.py  main6c_answer_validation.py
LangChain-middleware/: 01_middleware_owerview.md  (+5 more)
(+152 files in other folders)
